# Polymarket-Project

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: postmortem.md  strategy.md
data/reports/: latest_report.json
docs/: claude_code_prompt.md  collaboration.md  system_design.md
prompts/: cowork_decide_prompt.txt
scripts/: hourly_scan.bat  run_cowork_cycle.bat  run_cycle.py
src/polyclaude_bot/: __init__.py  cli.py  config.py
src/polyclaude_bot/data/: news_context.py  polymarket_client.py
src/polyclaude_bot/eval/: __init__.py  backtest.py  calibration.py
src/polyclaude_bot/features/: feature_engine.py
src/polyclaude_bot/llm/: claude_client.py  prompt_templates.py
src/polyclaude_bot/paper/: __init__.py  ledger.py
src/polyclaude_bot/risk/: risk_guard.py
src/polyclaude_bot/strategy/: __init__.py  decision_engine.py
src/polyclaude_bot/web/: __init__.py  app.py  env_store.py  handoff_reader.py  runner.py
src/polyclaude_bot/web/static/: polyclaude.css
src/polyclaude_bot/web/templates/: _cowork_flow.html  _decisions.html  _delta.html  _env_form.html  _run_output.html  _shortlist.html  base.html  index.html
tests/: test_decision_engine.py  test_feature_engine.py  test_risk_guard.py  test_shortlist.py
